<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="80dp"
    tools:context=".ui.register.RegisterFragment">

        <ImageView
            android:id="@+id/register_add_image_view"
            android:contentDescription="@string/register_add_image_view"
            app:srcCompat="@drawable/register_add_account"
            android:layout_width="353dp"
            android:layout_height="164dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:id="@+id/name"
            android:inputType="textPersonName"
            android:hint="@string/hint_text_person_name"
            android:importantForAutofill="no"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_add_image_view"/>
        <EditText
            android:id="@+id/last_name"
            android:inputType="textPersonName"
            android:hint="@string/hint_text_person_last_name"
            android:importantForAutofill="no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"/>
        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_text_email_address"
            android:importantForAutofill="no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name"/>
        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:hint="@string/hint_text_password"
            android:importantForAutofill="no"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"/>
        <EditText
            android:id="@+id/c_password"
            android:inputType="textPassword"
            android:hint="@string/hint_text_confirm_password"
            android:importantForAutofill="no"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"/>
        <ProgressBar
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/c_password"/>
        <Button
            android:id="@+id/register_btn"
            android:text="@string/btn_text_register"
            android:importantForAutofill="no"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loading" />

</androidx.constraintlayout.widget.ConstraintLayout>