<resources>
    <!-- URL -->
    <string name="URL_REGIST">https://ticketmachine.hostingasp.pl/register.php</string>
    <string name="URL_LOGIN">https://ticketmachine.hostingasp.pl/login.php</string>
    <string name="URL_EVENTS">https://ticketmachine.hostingasp.pl/getEvents.php</string>
    <string name="URL_ADDTICKET">https://ticketmachine.hostingasp.pl/addTicket.php</string>
    <string name="URL_GETUSERTICKETS">https://ticketmachine.hostingasp.pl/getUserTickets.php</string>
    <string name="URL_GETTICKET">https://ticketmachine.hostingasp.pl/getTicket.php</string>
    <string name="URL_GETUSER">https://ticketmachine.hostingasp.pl/getUser.php</string>
    <string name="URL_UPDATEUSERPERMISSION">https://ticketmachine.hostingasp.pl/updateUserPermission.php</string>
    <string name="URL_GETPRIVILEGEDUSERS">https://ticketmachine.hostingasp.pl/getPrivilegedUsers.php</string>
    <string name="URL_GETEVENT">https://ticketmachine.hostingasp.pl/getEvent.php</string>
    <string name="URL_GETTICKETBYKEY">https://ticketmachine.hostingasp.pl/getTicketByKey.php</string>
    <string name="URL_UPDATETICKETSTATUS">https://ticketmachine.hostingasp.pl/updateTicketStatus.php</string>
    <string name="URL_DELETEEVENT">https://ticketmachine.hostingasp.pl/deleteEvent.php</string>
    <string name="URL_ADDEVENT">https://ticketmachine.hostingasp.pl/addEvent.php</string>
    <!-- /URL -->

    <!-- Tools -->
    <string name="login_preference">com.example.ticket_machine_login_preference</string>
    <string name="login_status_preference">com.example.ticket_machine_login_status_preference</string>
    <string name="login_role_preference">com.example.ticket_machine_login_role_preference</string>
    <string name="login_id_preference">com.example.ticket_machine_login_id_preference</string>
    <string name="role_admin">admin</string>
    <string name="role_bodyguard">bodyguard</string>
    <string name="role_customer">customer</string>
    <string name="role_none">none</string>
    <!-- /Tools -->

    <!-- Settings -->
    <string name="action_logout">Logout</string>
    <string name="success_logout">Successfully logged out!</string>
    <string name="can_not_logout">You are not logged in, so you can not logout!</string>
    <string name="action_settings">Settings</string>
    <string name="text_testtings">Settings are not created yet.</string>
    <!-- /Settings -->

    <!-- Error -->
    <string name="response_catch_error">Error occurred. Try again. Catch Error: </string>
    <string name="response_listener_error">Error occurred. Try again. Listener Error:</string>
    <string name="error_field_empty">Field can not be empty!</string>
    <string name="error_not_valid_2_25">Please enter a valid text, between 2 and 25 characters!</string>
    <string name="error_not_valid_5_50">Please enter a valid text, between 5 and 50 characters!</string>

    <!-- /Error -->

    <!-- APP -->
    <string name="app_name">TicketMachine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ticket Machine</string>
    <string name="nav_header_subtitle">ticket.machine@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="home_second">Home Second</string>
    <!-- /APP -->

    <!-- General request strings -->
    <string name="success">success</string>
    <string name="one">1</string>
    <!-- /General request strings -->

    <!--Navigation-->
    <string name="menu_home">Home</string>
    <string name="menu_events">Parties</string>
    <string name="menu_tickets">Tickets</string>
    <string name="menu_register">Register</string>
    <string name="menu_login">Login</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_scanner">Scanner</string>
    <string name="menu_events_manage">Manage Parties</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_share">Share</string>
    <!--/Navigation-->

    <!--Home-->
    <string name="home_description_image_view">Party</string>
    <!--/Home-->

    <!-- Register -->
    <string name="register_add_image_view">Add account</string>
    <string name="hint_text_person_name">First Name</string>
    <string name="hint_text_person_last_name">Last Name</string>
    <string name="hint_text_email_address">Email address</string>
    <string name="hint_text_password">Password</string>
    <string name="hint_text_confirm_password">Confirm Password</string>
    <string name="btn_text_register">Register</string>
    <!-- /Register -->

    <!-- Login -->
    <string name="login_entrance_image_view">Entrance</string>
    <string name="btn_text_login">Login</string>
    <!-- /Login -->

    <!--Events-->
    <string name="events_first_header">Events</string>
    <string name="btn_buyticket">Buy ticket</string>
    <!--/Events-->

    <!--Tickets-->
    <string name="tickets_first_header">Tickets</string>
    <string name="qrcode_btn_text">Generate QR</string>
    <string name="qrcode_input_description">Enter QR code string</string>
    <string name="qrcode_image_container_description">QR code</string>
    <string name="title_activity_accounts">AccountsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!--/Tickets-->

    <!-- Accounts fragment-->
    <string name="btn_text_add">Add user permission</string>
    <!-- /Accounts fragment -->

    <!-- Accounts activity-->
    <string name="btn_text_search">Search</string>
    <string name="btn_text_permission">Change permission</string>
    <string name="text_view_user_detail">Searched user details!</string>
    
    <string name="toast_there_is_no_user">There is no user to change!</string>
    <string name="toast_selected_radio_button">Selected permission: </string>
    <string name="set_text_user">User</string>
    <string name="set_text_first_name">\nFirst Name: </string>
    <string name="set_text_last_name">\nLast Name: </string>
    <string name="set_text_email">\nEmail: </string>
    <string name="toast_user_not_find">User not found in database, try again.</string>
    <string name="toast_search_error">Search Error: </string>

    <string name="set_error_email_empty">Field can not be empty!</string>
    <string name="set_error_email_validation">Please enter a valid email address.</string>

    <string name="toast_update_permission_success">Update permission success</string>
    <string name="toast_update_permission_faild">Update permission failure, provided data is incorrect!</string>
    <string name="toast_update_permission_error">Update permission error: </string>

    <string name="text_view_first_header_a">Users in role ADMIN:</string>
    <string name="text_view_second_header_b">Users in role BODYGUARD:</string>
    <!-- /Accounts activity-->

    <!-- Scanner-->
    <string name="btn_text_scan">Scan QR Code</string>
    <string name="ticket_valid">Ticket valid</string>
    <string name="ticket_invalid">Invalid ticket</string>
    <!-- /Scanner-->

    <!-- Events Manage -->
    <string name="btn_text_delete">Delete</string>
    <string name="btn_text_add_event">Add event</string>
    <string name="text_view_first_header_events">List of active events</string>

    <string name="list_item_text_helper_price">Price: </string>
    <string name="list_item_text_helper_date_of_start">Event start: </string>
    <string name="list_item_text_helper_date_of_end">Event end: </string>
    <string name="toast_delete_success">The event has been successfully deleted</string>
    <string name="toast_delete_faild">The event cannot be deleted because tickets have already been bought!</string>
    <!-- /Events Manage -->

    <!-- Events Manage Activity -->
    <string name="events_manage_add_image_view">Add event</string>
    <string name="hint_text_event_name">Event name</string>
    <string name="hint_text_event_description">Event description</string>
    <string name="hint_text_event_price">Event price</string>
    <string name="hint_date_time_event_date_of_start">Event start</string>
    <string name="hint_date_time_event_date_of_end">Event end</string>


    <string name="btn_date_time_of_start_event">Choose start</string>
    <string name="btn_date_time_of_end_event">Choose end</string>
    <string name="btn_text_btn_save_event">Save event</string>

    <string name="toast_add_event_success">Add event success!</string>
    <string name="toast_add_event_failure">Add event failure, provided data is incorrect!</string>
    <!-- /Events Manage Activity -->
</resources>
